update and fix